--- a/pom.xml
+++ b/pom.xml
@@ -4,4 +4,11 @@
   <artifactId>nio-demo</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>nio-demo</name>
+  <dependencies>
+  	<dependency>
+		<groupId>dom4j</groupId>
+		<artifactId>dom4j</artifactId>
+		<version>1.6.1</version>
+	</dependency>
+  </dependencies>
 </project>
